unpackaged/main/default/objects/LinkedIn_Industry__c/LinkedIn_Industry__c.object-meta.xml
<CustomObject>
    <label>LinkedIn Industry</label>
    <nameField>
        <label>LinkedIn Industry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LinkedIn Industries</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>