unpackaged/main/default/objects/LinkedIn_Industry__c/fields/Industry_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Industry_Level_3__c</fullName>
    <label>Industry (Level 3)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LinkedIn_Level_3_Industry</valueSetName>
    </valueSet>
</CustomField>