unpackaged/main/default/objects/LinkedIn_Industry__c/fields/Industry_Score__c.field-meta.xml
<CustomField>
    <fullName>Industry_Score__c</fullName>
    <label>Industry Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>