unpackaged/main/default/objects/LinkedIn_Industry__c/fields/NAICS_2017_Code__c.field-meta.xml
<CustomField>
    <fullName>NAICS_2017_Code__c</fullName>
    <label>NAICS 2017 Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>