unpackaged/main/default/objects/LinkedIn_Industry__c/fields/Parent_Industry__c.field-meta.xml
<CustomField>
    <fullName>Parent_Industry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Industry</label>
    <referenceTo>LinkedIn_Industry__c</referenceTo>
    <relationshipLabel>LinkedIn Industries</relationshipLabel>
    <relationshipName>LinkedIn_Industries</relationshipName>
    <type>Lookup</type>
</CustomField>