unpackaged/main/default/objects/LinkedIn_Industry__c/fields/Taxonomy_Version__c.field-meta.xml
<CustomField>
    <fullName>Taxonomy_Version__c</fullName>
    <label>Taxonomy Version</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LinkedIn_Industry_Taxonomy_Version</valueSetName>
    </valueSet>
</CustomField>